Bug 78119 - bad july (červenec) month name support in czech localization
Summary: bad july (červenec) month name support in czech localization
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Localization (show other bugs)
Version:
(earliest affected)
4.2.3.3 release
Hardware: x86-64 (AMD64) Windows (All)
: medium major
Assignee: David Tardon
URL:
Whiteboard: target:4.3.0 target:4.2.5
Keywords:
Depends on:
Blocks:
 
Reported: 2014-04-30 15:54 UTC by realsuso
Modified: 2014-05-21 08:35 UTC (History)
3 users (show)

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description realsuso 2014-04-30 15:54:29 UTC
Hi there,

probably due to the similarity of the two czech month names "červen" (june) and "červenec" (july) the Calc app causes error: 502 when using "červenec" in VALUE or DATEVALUE function.

For all others czech month names the functions do the right job.

This is a long time nown bug in the czech user community already reported 3 months ago in relationship to date auto date field behavior https://bugs.freedesktop.org/show_bug.cgi?id=66620#c5

I hope you fix this soon.

THX

Daniel
Comment 1 Commit Notification 2014-05-12 12:17:30 UTC
David Tardon committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=624e5c34ce815af6f65ce6699ad6b3f2aa1bf0da

fdo#78119 find the longest match for month name



The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 2 Commit Notification 2014-05-13 12:20:44 UTC
David Tardon committed a patch related to this issue.
It has been pushed to "libreoffice-4-2":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=d2ee427df785a2447769b01c85f4a2952141fef8&h=libreoffice-4-2

fdo#78119 find the longest match for month name


It will be available in LibreOffice 4.2.5.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 3 Commit Notification 2014-05-17 02:38:58 UTC
Eike Rathke committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=e8b2e9163c953048e9e5f7f6cb9392b66be26e01

Back out change for fdo#78119 now that we have StringContainsWord()



The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 4 realsuso 2014-05-21 08:35:20 UTC
Hi,

it looks like the patch works fine.

Tested in Version: 4.2.5.0.0+, Build ID: bb8acc29e4ad4fb8245b2ed47e60c6cac641ddb1 from 2014-05-20.

THX folks.

Daniel